[package]
name = "unlocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
dirs = "3.0.2"
serde = { version = "1.0.129", features = ["derive"] }
toml = "0.5.8"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
