[package]
name = "unlocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
dirs = "4.0.0"
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
